sidux-graphics (0.7.18) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 28 May 2007 15:08:12 +0200

sidux-graphics (0.7.17) unstable; urgency=low

  * rebuild against current gfxboot.
  * tighten build-deps.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 28 May 2007 15:02:32 +0200

sidux-graphics (0.7.16) unstable; urgency=low

  * rebuild against new gfxboot-theme-sidux.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 28 May 2007 11:42:15 +0200

sidux-graphics (0.7.15) unstable; urgency=low

  [ Bernard Gray ]
  * initial user art added from tartarus wallpaper comp
  * added more sidux-snake themes for zulu9
  * added a stack of user wallpapers
  * added previews for TheBlunderBuss' svgs
  * added rodneyck's comp entry
  * added the last of the Tartaros wallpaper comp entries
  * add last of the valid entries in wallpaper thread
  * remove legacy sidux.jpg wallpaper install in rules

  [ Stefan Lippers-Hollmann ]
  * comment out the full call to sidux.jpg.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 14 May 2007 22:15:07 +0200

sidux-graphics (0.7.14) unstable; urgency=low

  * kanotix-graphics/ kanotix64-graphics were never part of sidux or debian,
    don't conflict with it.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu,  1 Mar 2007 17:58:34 +0100

sidux-graphics (0.7.13) unstable; urgency=low

  * pull in new gfxboot-theme-sidux.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu,  1 Mar 2007 17:58:25 +0100

sidux-graphics (0.7.12) unstable; urgency=low

  * update graphics.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 21 Feb 2007 05:45:49 +0100

sidux-graphics (0.7.10) unstable; urgency=low

  * test new gfxboot.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 21 Feb 2007 03:33:55 +0100

sidux-graphics (0.7.9) unstable; urgency=low

  * include new gfxboot-theme-sidux documentation.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 21 Feb 2007 03:33:43 +0100
